--- a/style.css
+++ b/style.css
@@ -382,13 +382,453 @@ span{
 
 }
 
-/* -- media query for less than 600 screen size*/
- 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 615px){
+    
+    
     .row{
         text-align: center;
     }
-    .col-2, .col-3, .col-4{
+     
+     .col-3{
         flex-basis: 100%;
     }
+    .col-3 img{
+        width: 400px;
+        margin-left: -5%;
+       
+    }
+
+    .small-container{
+        min-width: 100%;
+        border: 2px solid rgba(134, 184, 218, 0.1);
+    }
+    .col-4{
+        flex-basis: 100%;
+        border: 2px solid rgba(0, 0, 0, 0.1);
+        
+    }
+    .col-4 img{
+        width: 100%;
+        border-radius: 30px;
+    }
+    .col-4 p{
+        font-size: 28px;
+       
+    }
+    .col-4 h4{
+        font-weight: bold;
+        font-size: 18px;
+
+    }
+    
+    .small{
+        width: 30%;
+    }
+    .col-2{
+        margin-top: -30%;
+    }
+    .col-2 p{
+        color: rgb(27, 25, 25);
+        font-weight: 500;
+        font-size: 30px;
+    }
+    .btn{
+        height: 60px;
+       font-size: 30px;
+    }
+    .btn:hover{
+        transform: translatey(-10px);
+       
+    } 
+   
+    .col-2 img{
+        margin-top: 30%;
+    }
+    .logo img{
+        position: absolute;
+        width:30%;
+        left: 2%;
+        
+    }
+    .col-3 img{
+       
+        transition:1s;
+        border: 2px solid rgba(8, 8, 8, 0.1);
+       
+    }
+    .offer{
+        margin-top: 40px;
+    }
+    .col-2 .offer-img{
+        margin-bottom: 30%;
+    }
+    .testimonial .col-3 p{
+        width: 80%;
+        margin-left: 10%;
+    
+    }
+    
+ 
+.testimonial{
+    padding-top: 50px;
+    width: 70%;
+    margin-left: 13%;
+    
+
 }
+.testimonial .col-3{
+    
+    padding: 40px 20px;
+    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
+   
+}
+
+.testimonial .col-3 img{
+    width: 50px;
+    height: 60px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.fa.fa-quote-left{
+    font-size: 20px;
+    color: navy;
+}
+.col-3 p{
+    font-size: 20px;
+    margin: 12px 0;
+    font-weight: bold;
+    color: #000;
+}
+.testimonial .col-3 h3{
+    font-weight: 600;
+    color: #555;
+    font-size: 15px;
+}
+
+.app-logo1{
+    display: flex;
+    margin-top: -5%;
+   margin-left: -200%;
+   
+}
+.app-logo1 img{
+    width: 95px;
+    margin-bottom:0;
+    
+}
+.app-logo2{
+    display: flex;
+    margin-top: -15%;
+   margin-left: -160%;
+   
+}
+.app-logo2 img{
+    width: 100px;
+    margin-bottom: 0;
+    
+}
+    
+}
+
+
+
+
+
+@media only screen and (max-width: 800px){
+    
+    
+    .row{
+        text-align: center;
+    }
+     
+     .col-3{
+        flex-basis: 100%;
+    }
+    .col-3 img{
+        width: 400px;
+        margin-left: -5%;
+       
+    }
+
+    .small-container{
+        min-width: 100%;
+        border: 2px solid rgba(134, 184, 218, 0.1);
+    }
+    .col-4{
+        flex-basis: 100%;
+        border: 2px solid rgba(0, 0, 0, 0.1);
+        
+    }
+    .col-4 img{
+        width: 100%;
+        border-radius: 30px;
+    }
+    .col-4 p{
+        font-size: 28px;
+       
+    }
+    .col-4 h4{
+        font-weight: bold;
+        font-size: 18px;
+
+    }
+    
+    .small{
+        width: 30%;
+    }
+    
+    .col-2 p{
+        color: rgb(27, 25, 25);
+        font-weight: 500;
+        font-size: 30px;
+    }
+    .btn{
+        height: 60px;
+       font-size: 30px;
+    }
+    .btn:hover{
+        transform: translatey(-10px);
+       
+    } 
+   
+    .col-2 img{
+        margin-top: 30%;
+    }
+    .logo img{
+        position: absolute;
+        width:30%;
+        left: 2%;
+        
+    }
+    .col-3 img{
+       
+        transition:1s;
+        border: 2px solid rgba(8, 8, 8, 0.1);
+       
+    }
+    .offer{
+        margin-top: 40px;
+    }
+    .col-2 .offer-img{
+        margin-bottom: 30%;
+    }
+    .testimonial .col-3 p{
+        width: 80%;
+        margin-left: 10%;
+    
+    }
+    
+ 
+.testimonial{
+    padding-top: 50px;
+    width: 70%;
+    margin-left: 13%;
+    
+
+}
+.testimonial .col-3{
+    
+    padding: 40px 20px;
+    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
+   
+}
+
+.testimonial .col-3 img{
+    width: 50px;
+    height: 60px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.fa.fa-quote-left{
+    font-size: 20px;
+    color: navy;
+}
+.col-3 p{
+    font-size: 20px;
+    margin: 12px 0;
+    font-weight: bold;
+    color: #000;
+}
+.testimonial .col-3 h3{
+    font-weight: 600;
+    color: #555;
+    font-size: 15px;
+}
+
+.app-logo1{
+    display: flex;
+    margin-top: -5%;
+   margin-left: -200%;
+   
+}
+.app-logo1 img{
+    width: 95px;
+    margin-bottom:0;
+    
+}
+.app-logo2{
+    display: flex;
+    margin-top: -15%;
+   margin-left: -160%;
+   
+}
+.app-logo2 img{
+    width: 100px;
+    margin-bottom: 0;
+    
+}
+    
+}
+
+
+
+@media only screen and (min-width: 801px){
+    
+    
+    .row{
+        text-align: center;
+    }
+     
+     .col-3{
+        flex-basis: 20%;
+    }
+    .col-3 img{
+        width: 200px;
+        margin-left: -5%;
+       
+    }
+
+    .small-container{
+        min-width: 100%;
+        border: 2px solid rgba(134, 184, 218, 0.1);
+    }
+    .col-4{
+        flex-basis: 20%;
+        border: 2px solid rgba(0, 0, 0, 0.1);
+        
+    }
+    .col-4 img{
+        width: 100%;
+        border-radius: 30px;
+    }
+    .col-4 p{
+        font-size: 28px;
+       
+    }
+    .col-4 h4{
+        font-weight: bold;
+        font-size: 18px;
+
+    }
+    
+    .small{
+        width: 30%;
+    }
+    
+    .col-2 p{
+        color: rgb(27, 25, 25);
+        font-weight: 500;
+        font-size: 30px;
+    }
+    .btn{
+        height: 60px;
+       font-size: 30px;
+    }
+    .btn:hover{
+        transform: translatey(-10px);
+       
+    } 
+   
+    .col-2 img{
+        margin-top: 30%;
+    }
+    .logo img{
+        position: absolute;
+        width:30%;
+        left: 2%;
+        
+    }
+    .col-3 img{
+       
+        transition:1s;
+        border: 2px solid rgba(8, 8, 8, 0.1);
+       
+    }
+    .offer{
+        margin-top: 40px;
+    }
+    .col-2 .offer-img{
+        margin-bottom: 30%;
+    }
+    .testimonial .col-3 p{
+        width: 80%;
+        margin-left: 10%;
+    
+    }
+    
+ 
+.testimonial{
+    padding-top: 50px;
+    width: 70%;
+    margin-left: 13%;
+    
+
+}
+.testimonial .col-3{
+    
+    padding: 40px 20px;
+    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
+   
+}
+
+.testimonial .col-3 img{
+    width: 50px;
+    height: 60px;
+    margin-top: 20px;
+    border-radius: 50%;
+}
+
+.fa.fa-quote-left{
+    font-size: 20px;
+    color: navy;
+}
+.col-3 p{
+    font-size: 20px;
+    margin: 12px 0;
+    font-weight: bold;
+    color: #000;
+}
+.testimonial .col-3 h3{
+    font-weight: 600;
+    color: #555;
+    font-size: 15px;
+}
+
+.app-logo1{
+    display: flex;
+    margin-top: -5%;
+   margin-left: -200%;
+   
+}
+.app-logo1 img{
+    width: 95px;
+    margin-bottom:0;
+    
+}
+.app-logo2{
+    display: flex;
+    margin-top: -15%;
+   margin-left: -160%;
+   
+}
+.app-logo2 img{
+    width: 100px;
+    margin-bottom: 0;
+    
+}
+    
+}
+
+
