--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body{
     align-items: center;
     padding: 20px;
 }
+.logo img{
+    position: absolute;
+    width: 15%;
+    height: auto;
+    top: -5%;
+}
 nav{
     flex: 1;
     text-align: right;
@@ -27,7 +33,7 @@ nav ul li{
     display: inline-block;
     margin-right: 20px;
 }
-a{
+ a{
     text-decoration: none;
     color: #555;
     font-weight: 400;
@@ -36,7 +42,7 @@ a{
 a:hover{
     font-weight: bold;
 }
-p{
+.col-2 p{
     color: #555;
     font-weight: 500;
 }
@@ -47,21 +53,25 @@ p{
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
+   
 }
 .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+   
 }
 .col-2{ 
     flex-basis: 50%;
     min-width: 300px;
+    
    
 }
 .col-2 img{
     max-width: 100%;
     padding: 50px 0;
+  
 
    
     
@@ -72,7 +82,7 @@ p{
     margin: 25px 0;
     opacity: 0;
     animation: animate 1s ease-in-out 0.5s 1 forwards;
-    
+     
 }
 .col-2 p{
     opacity: 0;
@@ -109,6 +119,20 @@ p{
         filter: blur(0);
     }
 }
+
+@keyframes slideinright{
+    from{
+        transform: translateX(300px);
+    }
+    to{
+        transform: translateX(0);
+    }
+    
+}
+.slideinright{
+    animation: slideinright 1s ease-in ;
+    
+}
 .header{
     background: radial-gradient(#fff, #a8c4c4);
 }
@@ -120,9 +144,11 @@ p{
     margin-top: 70px 0;
 }
 .col-3{
-    flex-basis: 30%;
+    flex-basis: 20%;
     min-width: 250px;
     margin-bottom: 30px ;
+    justify-content: center;
+    
 }
 .col-3 img{
     width: 100%;
@@ -132,23 +158,7 @@ p{
 .col-3 img:hover{
     transform: translateX(5px);
 }
-@keyframes appear{
-        from{
-            opacity: 0;
-            scale: 0.5;
-            transform: translateX(-50px);
-        }
-        to{
-            opacity: 1;
-            scale: 1;
-            transform: translateX(0);
-        }
-    }
-     .col-2, .col-3, .col-4, .col-5{
-        animation: appear linear;
-        animation-timeline: view();
-        animation-range: entry 0% cover 40%;
-    }
+
 .small-container{
     min-width: 1080px;
     margin: auto;
@@ -186,7 +196,7 @@ p{
     left: 50%;
     transform: translateX(-50%);
 }
-h4{
+.col-4 h4{
     color: #555;
     font-weight: normal;
 }
@@ -205,7 +215,7 @@ h4{
     background: radial-gradient(#fff, #a8c4c4);
     margin-top: 80px;
     padding: 30px 0;
-   
+   margin-bottom: 20px;
 }
 .col-2 .offer-img{
     padding: 50px;
@@ -217,67 +227,46 @@ small{
     opacity: 0;
     animation: animate 1s ease-in-out 0.5s 1 forwards;
 }
-
-/* --testimonial--*/
+/* testimonial */
 .testimonial{
-    padding-top: 100px;
-    height: 50%; 
-
+   padding-top: 100px;
 }
 .testimonial .col-3{
     text-align: center;
     padding: 40px 20px;
-    box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: 0.5s;
-    position: relative;
-    background: #fff;
+    transition: transfrom 0.5s;
+    font-weight: bold;
 }
-
 .testimonial .col-3 img{
     width: 50px;
-    height: 60px;
     margin-top: 20px;
-    border-radius: 50%;
+    border-radius:50%;
+    height: 50px;
+    
 }
 .testimonial .col-3:hover{
-    transform: translateY(-10px);
-    background-color: antiquewhite;
+    transform: translateY(-5px);
+    background: rgb(229, 234, 236);
 }
 .fa.fa-quote-left{
-    font-size: 40px;
     color: navy;
 }
-.col-3 p{
-    font-size: 15px;
+.testimonial .col-3 p{
+    font-size: 12px;
     margin: 12px 0;
-    font-weight: bold;
-    color: #000;
+    color: rgb(56, 53, 53);
+    
 }
-.testimonial .col-3 h3{
-    font-weight: 600;
-    color: #555;
-    font-size: 15px;
+.testimonial .col-3 h3:hover{
+    color: red;
 }
+       
 
-/* brands */
-.brands{
-    margin: 100px auto;
-}
-.col-5{
-    width: 160px;
-}
-.col-5 img{
-    width: 100%;
-    cursor: pointer;
-    filter: grayscale(100%);
-    height: 80px;
-}
-.col-5 img:hover{
-    filter: grayscale(0);
-}
 
-/* footet */
+
+/* footer */
 .footer{
     background: #2c2b2b;
     color: #fff;
@@ -354,9 +343,10 @@ span{
     display: none;
 }
 
-/* -- media query for menu*/
+/* media query for menu-icon */
 
 @media only screen and (max-width: 800px){
+    
     nav ul{
         position: absolute;
         top: 70px;
@@ -379,7 +369,6 @@ span{
         display: block;
         cursor: pointer;
     }
-
 }
 
 @media only screen and (max-width: 615px){
